# GoIT-WEB-module13-part2

./: README.md  pyproject.toml
authors_quotes/: manage.py
authors_quotes/authors_quotes/: asgi.py  settings.py  urls.py  wsgi.py
authors_quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
authors_quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date.py  0003_remove_tag_tag_of_username_remove_tag_user_tag_tag.py
authors_quotes/quoteapp/rabbit/: consumer.py  producer.py  rabbit_connect.py
authors_quotes/quoteapp/scraping/: author.py  quote.py  save_data_db.py  scrape.py
authors_quotes/quoteapp/static/quoteapp/: spinner.js  style.css
authors_quotes/quoteapp/templates/quoteapp/: author.html  base.html  detail_author.html  index.html  quote.html  searched_quotes.html  tag.html
authors_quotes/userapp/: urls.py  views.py
authors_quotes/userapp/templates/userapp/: login.html  password_reset.html  password_reset_confirm.html  password_reset_email.html  signup.html  test.html
