[tool.poetry]
name = "goit-web-module10"
version = "0.1.0"
description = ""
authors = ["Nataliia Tiutiunnyk <nat.tiutiunnyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
mongoengine = "^0.27.0"
scrapy = "^2.11.0"
rabbit = "^1.2.0"
pika = "^1.3.2"
crefi = "^2.0.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
